# jive-flutter-rust

./: .claude.local.example  .env  .env.example  .gitignore  .insyncignore  .jive-config  AGENTS.md  ANALYZER_CLEANUP_PHASE_1_2_REPORT_2025-09-19.md  ANALYZER_ERROR_LIST_2025-09-19.md  ANDROID_SDK_STATUS (2).md  API_FRONTEND_COMPARISON_REPORT.md  AUTH_SERVICE_ATOMIC_TRANSACTION_FIX_REPORT.md  AUTOMATION_RULES_DESIGN.md  AXUM_ROUTING_FIX_REPORT.md  BRANCH_STATUS_REPORT.md  CATEGORY_FEATURE_DESIGN.md  CATEGORY_IMPORT_VALIDATION_REPORT.md  CATEGORY_SYSTEM_DESIGN.md  CATEGORY_TEST_REPORT.md  CHANGELOG.md  CI_COMPLETE_SUCCESS_REPORT.md  CI_FINAL_COMPREHENSIVE_REPORT.md  CI_FINAL_REPORT.md  CI_FINAL_SUCCESS_REPORT.md  CI_FINAL_TEST_REPORT.md  CI_FIX_COMPLETE_REPORT.md  CI_FIX_REQUIRED.md  CI_FIX_SUCCESS_REPORT.md  CI_JIVE_CORE_CHECK_REPORT.md  CI_MONITORING_REPORT.md  CI_SUCCESS_REPORT.md  CI_TEST_REPORT.md  CI_TEST_RESULT_REPORT.md  CI_VERIFICATION_REPORT.md  CLAUDE.md  CLAUDE_SESSION.md  COMPLETE_MAYBE_BASED_IMPLEMENTATION (2).md  COMPLETION_STATUS_REPORT.md  CONFLICT_RESOLUTION_REPORT.md  CONVERSATION_SUMMARY_2025-09-19.md  (+190 more)
jive-api/: .dockerignore  .env  API_INTEGRATION_TEST_REPORT.md  API_STATUS_REPORT.md  API_VERSIONS.md  BACKEND_API_FIX_REPORT.md  CI_FINAL_SUCCESS_REPORT.md  CI_FIX_STRATEGY.md  CI_VERIFICATION_REPORT.md  CLEAN_STRUCTURE.md  Cargo.toml  DEPLOYMENT_STRATEGY (2).md  DOCKER_SETUP_COMPLETE.md  Dockerfile  Dockerfile (2)  Dockerfile (2).dev  Dockerfile (2).macos  Dockerfile (2).macos-full  Dockerfile (2).macos-simple  Dockerfile (2).multiarch  Dockerfile (2).prebuilt  Dockerfile (2).simple  Dockerfile.ubuntu  FAMILY_IMPLEMENTATION_ANALYSIS (2).md  FILE_STRUCTURE.md  FIX_REPORT (2).md  FIX_REPORT_EXPORT_BENCHMARK_2025_09_25.md  HANDLER_REFACTORING_COMPLETION_REPORT.md  HANDLER_REFACTORING_FINAL_REPORT.md  HOW_TO_RESTART.md  IMPLEMENTATION_TODO (2).md  LOGIN_FIX_REPORT.md  MERGE_READINESS_REPORT.md  Makefile  Makefile (2)  POST_MERGE_TASKS_REPORT_2025_09_25.md  PR47_METRICS_VERIFICATION_REPORT.md  PR_110_MERGE_GUIDE.md  PR_MERGE_STATUS_REPORT.md  README (2).md  (+41 more)
jive-api/.cargo/: config.toml
jive-api/.sqlx/: query-0469b9ee3546aad2950cbe5973540a60c0187a6a160f8542ed1ef601cb147506.json  query-062709b50755b58a7663c019a8968d2f0ba4bb780f2bb890e330b258de915073.json  query-0aa53243e6d2529de382cb72e484cfe840b0100c44c5fee103c8d8735ad04dce.json  query-0d7cd44ff2420327d44fae59a2c3eec1cf15db30b61989b8a8a94f1d2088cae6.json  query-0d8aa895406b135b885f5434f1e51ab91893e7afa131e17ffe49bf1cc99bd9ae.json  query-0e05d7bb5593d3d5a75902c91da6cb30663ba97f3c516585bf8470887f1b522d.json  query-1894aef93596bb1aa611db35f1fedf9b71ea8d8a50a876709a90a4b236c605ac.json  query-1a00d9fef6f6b1d196f9dd450bc1a260c46f9635c71e830ac66002340cd2d7c2.json  query-1a60d1207fa4af06e02f770592f1e3ab1ef0ae87c6632d0f6bc1ee31b679cdf4.json  query-1c1d373638d2c4fedf3ed5f27af6b3deea0cd365bf6e21b22da72ad7f4cc2ddd.json  query-1dade7571ba6291d0ff148280c26f57632846cbc7ab93c8a6c58cf276c745e69.json  query-1df6372781aa0f7fcfae6b7cca896068f7f868b2458014f186a7990b6543abf2.json  query-227ad3b4743ca53f1afbe7d5beab9f2eef017e129c3333e9578c8d328483861d.json  query-2409847d249172d3e8adf95fb42c28e6baed7deba4770aa23b02cace375c311c.json  query-2680309a4023486aed2d3be8ce2c2c7a2ff9916e8cb01a24de5800c6735a50a8.json  query-2763aee9cc961cfd282d87b12d6843e49b90ab88db1d50df0a133470036a7161.json  query-29b33b3c2fe583d4e6730f55b521a97853fc600e958736890ac377a774057921.json  query-2cd9c94530ea5c054b9490509e2869656fedfa68d0f78640224142b5bd72035b.json  query-2f69ae56321893ed57ee9f31d0c931b0cfcb8eb6cc91b6db1512a1baac0b09bd.json  query-32661508b0d0fb5d091a005a81942e3cc32fcd037d7ce506f33de14205d6df8b.json  query-3b0a14c3d646f1c6e8b8ca1889cab57da63ea6286cb47b06b35041e70342bd36.json  query-4592d67747026e4affa49d102cdba47b7dece8bc34c6847b3b6ec932d2f6fd62.json  query-480cbbc19a38179a1ddc18a64b3e3d7693795a80545b2d353240568cefffe683.json  query-4ba979ecaed6486f9e128ed8270adb72087b89838e7e34c9a78a8d42e59a6d16.json  query-5297fb0ba05e9271d8aad2102a11880838473f4785f5a61010bc59dfffeb7fe4.json  query-55b6fd50012499f9548b72968eb78954a2169bda7d9ad761f7acbca13a0cbf9b.json  query-55d06f356978b20c3de14d2cdd717e364f68bee20f1b8949af098d2c15d254a4.json  query-5750b29318437d24108fceebc9644386b5a59bd0cd91d65e3bf34a05a4777394.json  query-575a4f8b272a24dc48bd374d07cbcc92898be0f171725c5254fc3f65bb4aa457.json  query-57a309bb7fe92af3313bb2773dc959bc0a5bace9229c5d5ef0958eded9b0bc03.json  query-583518d025d69fcc6b2ad1db2c2d6e69242c2c68d8a73d9052458468af928bf7.json  query-58b695f0150b71a738eb029c044762f511b83788937bff81674a9ccf5a5f1a51.json  query-5c153a5e53b90f2c7e8353f1ee0d5e3e62e4140d96c8f643c55113cbcbf9e09d.json  query-5fbc0def2fbea3dc09dbe5796771bbe84bf7b71b8dd3e6313bc497762ff041d0.json  query-669abf06c00484fa35ac28131bb417cc178321d32b97c26b1f0842a08ca51a54.json  query-6707dc4ca72395a557e4af0d91b10fb7057e9d9fe83163baf2cd827c3332287f.json  query-692d1a95ee75ea74da01dbc2e6914519609c6b7a56cbd02bbde9243f2a4cbb09.json  query-6ad98705e90a43617b8ccfd92136eeb8a9b16dd6d9e17c4a684dad07ed11e230.json  query-6bb70f4fad262238b93adb800f460ad2db465e97f11a9a1d34ee295d8f5bfa59.json  query-6c4ba675d6e020498e2081d580abe10e645e36bd63f70c835280564442a0a339.json  (+53 more)
jive-api/api-clippy-output/: api-clippy-output.txt
jive-api/cargo-deny-output/: cargo-deny-output.txt
jive-api/claudedocs/: ADD_MULTI_API_SUPPORT.md  AVATAR_SERVICE_PLAN.md  EXCHANGE_RATE_ARCHITECTURE_ANALYSIS.md  (+7 more)
jive-core/: A2B_LEDGER_ID_ALIGNMENT_REPORT.md  API_ADAPTER_LAYER_REPORT.md  APPLICATION_LAYER_INTERFACES_REPORT.md  COMPLETE_FIX_SUMMARY.md  CORE_DTO_ALIGNMENT_PLAN.md  CRITICAL_BUG_FIX_SPLIT_TRANSACTION.md  CURRENT_STATUS_REPORT.md  Cargo.toml  DB_ROADMAP.md  DOMAIN_LAYER_FOUNDATION_REPORT.md  Dockerfile  EMAIL_VALIDATION_FIX_REPORT.md  F64_PRECISION_BUG_FIX_COMPLETE_GUIDE.md  IMPLEMENTATION_COMPLETE_REPORT.md  INFRASTRUCTURE_SUPPLEMENTS_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  README.md  SPLIT_TRANSACTION_FIX.md  SPLIT_TRANSACTION_TESTS.md  TRANSACTION_SPLIT_FIX_COMPLETE_REPORT.md  TRANSACTION_TEST_FIX_REPORT.md  开发完成报告.md
(+1011 files in other folders)
