[package]
name = "jive-money-api"
version = "1.0.0"
edition = "2021"
authors = ["Jive Money Team"]
description = "Jive Money API Server for category template management"

[dependencies]
# Web框架
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "rust_decimal"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日期时间
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 配置管理
config = "0.14"
dotenv = "0.15"
rust_decimal = { version = "1.37", features = ["serde"] }
jsonwebtoken = "9.3.1"
thiserror = "2.0.16"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
anyhow = "1.0.99"

# WebSocket支持
tokio-tungstenite = "0.24"
futures = "0.3"
futures-util = "0.3"

# 密码哈希
argon2 = "0.5"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "jive-api"
path = "src/main.rs"

[[bin]]
name = "jive-api-simple"
path = "src/main_simple.rs"

[[bin]]
name = "jive-api-core"
path = "src/main_simple_ws.rs"

[[bin]]
name = "jive-api-ws"
path = "src/main_with_ws.rs"
