[package]
name = "jive-money-api"
version = "1.0.0"
edition = "2021"
authors = ["Jive Money Team"]
description = "Jive Money API Server for category template management"

[lib]
name = "jive_money_api"
path = "src/lib.rs"

[dependencies]
# Web框架
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "rust_decimal"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日期时间
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 配置管理
config = "0.14"
dotenv = "0.15"
rust_decimal = { version = "1.37", features = ["serde"] }
thiserror = "2.0.16"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
anyhow = "1.0.99"
base64 = "0.22"
# Make core optional; gate usage behind feature `core_export`
jive-core = { path = "../jive-core", package = "jive-core", features = ["server", "db"], default-features = false, optional = true }
bytes = "1"

# WebSocket支持
tokio-tungstenite = "0.24"
futures = "0.3"
futures-util = "0.3"

# 密码哈希
argon2 = "0.5"

# Redis缓存
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "json"] }
bcrypt = "0.15"

# JWT认证
jsonwebtoken = "9.3"

# 随机数生成
rand = "0.8"

# HTTP客户端
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# 静态变量
lazy_static = "1.4"
tokio-stream = "0.1.17"

[features]
default = ["demo_endpoints"]
# Demo/placeholder HTTP endpoints (export/activity/advanced/family settings)
demo_endpoints = []
# Enable to use jive-core export service paths
# When core_export is enabled, also enable jive-core's db feature so CSV helpers are available.
core_export = ["dep:jive-core"]
# Stream CSV export incrementally instead of buffering whole response
export_stream = []

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "jive-api"
path = "src/main.rs"

[[bin]]
name = "jive-api-simple"
path = "src/main_simple.rs"

[[bin]]
name = "jive-api-core"
path = "src/main_simple_ws.rs"
